# ai-execution-boundaries

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DIAGRAM.md  LAUNCH_CHECKLIST.md  Makefile  NEXT_2_WEEKS.md  POSITIONING.md  README.md  README_INTEGRATION.md  ROADMAP.md  SCOPE.md  demo-recording.sh  demo.sh  langgraph_audit.db  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: README.md  diagram-instructions.md  diagram-specs.md  execution-boundary-topology.excalidraw.json  execution-boundary-topology.mmd  recording-instructions.md
examples/: allowed.py  audit.py  blocked.py  langgraph_integration.py
src/execution_boundary/: __init__.py  async_boundary.py  boundary.py  policy.py
src/execution_boundary/audit/: __init__.py  base.py  memory.py  null.py  sqlite.py  stdout.py
src/execution_boundary/core/: __init__.py  context.py  decision.py  violation.py
tests/: __init__.py  test_async_boundary.py  test_audit_backends.py  test_cancellation.py  test_core.py
