[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-boundary"
version = "0.1.0"
description = "Validation layer for AI agents with write access"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Justin Harmon", email = "justin@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Jh-justinHarmon/ai-execution-boundaries"
Repository = "https://github.com/Jh-justinHarmon/ai-execution-boundaries"

[tool.setuptools.packages.find]
where = ["src"]
